<resources>
    <string name="app_name">MovieSearchApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write">검색어를 입력해주세요</string>
    <string name="recent_search">최근 검색</string>
    <string name="search">검색</string>
    <string name="empty_screen">빈 화면입니다</string>
    <string name="recent_search_list">최신 검색 목록</string>
    <string name="empty">empty</string>
</resources>